--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dev = [
 
 [tool.zorkgpt.llm]
 # LLM Configuration
-client_base_url = "https://openrouter.ai/api/v1"
+client_base_url = "http://schuyler.ai:30001/v1"
 agent_model = "qwen/qwen3-235b-a22b"
 info_ext_model = "gemma-3-12b-it-qat"
 # info_ext_model = "google/gemma-3-12b-it"
@@ -38,8 +38,8 @@ analysis_model = "meta-llama/llama-4-scout"
 # If not specified, will fall back to client_base_url
 # Examples:
 # agent_base_url = "https://api.together.xyz/v1"
-info_ext_base_url = "http://oracle.nord:1234/v1"
-critic_base_url = "http://oracle.nord:1234/v1"
+# info_ext_base_url = "http://oracle.nord:1234/v1"
+# critic_base_url = "http://oracle.nord:1234/v1"
 # analysis_base_url = "https://api.openai.com/v1"
 
 [tool.zorkgpt.retry]
