--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,21 +26,21 @@ dev = [
 
 [tool.zorkgpt.llm]
 # LLM Configuration
-client_base_url = "http://schuyler.ai:30001/v1"
-agent_model = "qwen/qwen3-235b-a22b"
-info_ext_model = "gemma-3-12b-it-qat"
-# info_ext_model = "google/gemma-3-12b-it"
-critic_model = "gemma-3-12b-it-qat"
-# critic_model = "google/gemma-3-12b-it"
-analysis_model = "meta-llama/llama-4-scout"
+client_base_url = "http://192.168.4.245:30001/v1"
+agent_model = "Llama-3.3-70B-Instruct-exl2_4.0bpw"
+info_ext_model = "Llama-3.3-70B-Instruct-exl2_4.0bpw"
+# info_ext_model = "Llama-3.3-70B-Instruct-exl2_4.0bpw"
+critic_model = "Llama-3.3-70B-Instruct-exl2_4.0bpw"
+# critic_model = "Llama-3.3-70B-Instruct-exl2_4.0bpw"
+analysis_model = "Llama-3.3-70B-Instruct-exl2_4.0bpw"
 
 # Per-model base URLs (optional, for cost optimization)
 # If not specified, will fall back to client_base_url
 # Examples:
-# agent_base_url = "https://api.together.xyz/v1"
-# info_ext_base_url = "http://oracle.nord:1234/v1"
-# critic_base_url = "http://oracle.nord:1234/v1"
-# analysis_base_url = "https://api.openai.com/v1"
+# agent_base_url = 
+# info_ext_base_url = 
+# critic_base_url = 
+# analysis_base_url = 
 
 [tool.zorkgpt.retry]
 # Retry and Exponential Backoff Configuration
